--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,16 +16,17 @@ commands:
               --cluster="${KUBE_ENV_NAME}" \
               --user="circleci" \
               --namespace="${KUBE_ENV_NAMESPACE}"
+            # confirm setup is ok
+            kubectl -n "${KUBE_ENV_NAMESPACE}" get deployments
   copy_image_to_ecr:
     steps:
-      - checkout
+      - setup_remote_docker
       - attach_workspace:
           at: ~/app
-      - setup_remote_docker
       - run:
           name: publish image to ecs
           command: |
-            APP_VERSION=$(cat ./app_version.txt)
+            APP_VERSION=$(cat ./app/app_version.txt)
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
             docker pull mojdigitalstudio/whereabouts-api:$APP_VERSION
 
@@ -41,10 +42,13 @@ commands:
         type: string
     steps:
       - setup_remote_docker
+      - checkout
+      - attach_workspace:
+          at: ~/app
       - deploy:
           name: Deploy to << parameters.env >>
           command: |
-            APP_VERSION=$(cat ./app_version.txt)
+            APP_VERSION=$(cat ./app/app_version.txt)
             AWS_ACCESS_KEY_ID=${SM_AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=${SM_AWS_SECRET_ACCESS_KEY} aws secretsmanager --region ${AWS_DEFAULT_REGION} get-secret-value --secret-id ${KUBE_ENV_NAMESPACE} | jq -r .SecretString | \
             helm upgrade whereabouts-api helm_deploy/whereabouts-api/. \
               --install --wait --timeout 600 \
@@ -58,7 +62,6 @@ executors:
   deployer:
     docker:
       - image: ${CP_TOOLS_IMAGE}
-    working_directory: ~/app  
   builder:  
     docker:
       - image: circleci/openjdk:11-jdk-browsers
