--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ commands:
           name: Setup kubectl
           command: |
             echo -n "${KUBE_ENV_CACERT}" | base64 -d > cluster_ca.crt
-            kubectl config set-cluster circleci \
+            kubectl config set-cluster "${KUBE_ENV_NAME}" \
               --certificate-authority="cluster_ca.crt" \
               --server="https://api.${KUBE_ENV_NAME}"
             kubectl config set-credentials circleci \
