--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,13 +129,13 @@ jobs:
                --label "build.url=$CIRCLE_BUILD_URL" \
                --label "build.gitref=$CIRCLE_SHA1"
 
-            if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
+            #if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
               # publish to docker hub as the tag
              docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
              docker tag mojdigitalstudio/whereabouts-api:$APP_VERSION mojdigitalstudio/whereabouts-api:latest
              docker push mojdigitalstudio/whereabouts-api:$APP_VERSION
              docker push mojdigitalstudio/whereabouts-api:latest
-            fi
+            #fi
 
   deploy_dev:
     executor: deployer
