--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
               --certificate-authority="/tmp/cluster_ca.crt" \
               --server="https://api.${KUBE_ENV_NAME}"
             kubectl config set-credentials circleci \
-              --token="${KUBE_ENV_DEV_TOKEN}"
+              --token="${KUBE_ENV_TOKEN}"
             kubectl config set-context circleci \
               --cluster="${KUBE_ENV_NAME}" \
               --user="circleci" \
@@ -51,7 +51,7 @@ commands:
             APP_VERSION=$(cat ~/app/app_version.txt)
             AWS_ACCESS_KEY_ID=${SM_AWS_ACCESS_KEY_ID} AWS_SECRET_ACCESS_KEY=${SM_AWS_SECRET_ACCESS_KEY} aws secretsmanager --region ${AWS_DEFAULT_REGION} get-secret-value --secret-id ${KUBE_ENV_NAMESPACE} | jq -r .SecretString | \
             helm upgrade whereabouts-api helm_deploy/whereabouts-api/. \
-              --install --wait --timeout 600 \
+              --install --wait --atomic --force --reset-values --timeout 360 \
               --tiller-namespace=${KUBE_ENV_NAMESPACE} \
               --namespace=${KUBE_ENV_NAMESPACE} \
               --values ./helm_deploy/values-<< parameters.env >>.yaml \
