--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -15,7 +15,7 @@ ingress:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/whitelist-source-range: "217.33.148.210/32,81.134.202.29/32,35.176.223.47/32"
   hosts:
-    - host: whereabouts-api-prod.service.justice.gov.uk
+    - host: whereabouts-api.service.justice.gov.uk
       cert_secret: whereabouts-api-cert
   path: /
 
