--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -53,3 +53,7 @@ generic-service:
 
 generic-prometheus-alerts:
   targetApplication: whereabouts-api
+
+ingress:
+  # live-1 is blue, live is green
+  contextColour: green
