--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -1,12 +1,17 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+generic-service:
+  replicaCount: 2
 
-image:
-  repository: quay.io/hmpps/whereabouts-api
-  tag: latest
-  port: 8080
+  ingress:
+    host: whereabouts-api-dev.service.justice.gov.uk
+
+  env:
+    ELITE2API_ENDPOINT_URL: "https://api-dev.prison.service.justice.gov.uk"
+    OAUTH_ENDPOINT_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
+    CASENOTES_ENDPOINT_URL: "https://dev.offender-case-notes.service.justice.gov.uk"
+    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
 
 ingress:
   enabled: true
@@ -15,13 +20,6 @@ ingress:
     - host: whereabouts-api-dev.service.justice.gov.uk
       cert_secret: whereabouts-api-cert
   path: /
-
-env:
-  ELITE2API_ENDPOINT_URL: "https://api-dev.prison.service.justice.gov.uk"
-  OAUTH_ENDPOINT_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
-  CASENOTES_ENDPOINT_URL: "https://dev.offender-case-notes.service.justice.gov.uk"
-  JAVA_OPTS: "-Xmx512m"
-  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
 
 whitelist:
   office: "217.33.148.210/32"
