--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -1,55 +1,5 @@
 ---
 # Values here are the same across all environments
-generic-service:
-
-  image:
-    repository: quay.io/hmpps/whereabouts-api
-    tag: latest
-    port: 8080
-
-  ingress:
-    enabled: true
-    host: app-hostname.local
-    tlsSecretName: whereabouts-api-cert
-    v1_2_enabled: true
-    v0_47_enabled: false
-
-  env:
-    JAVA_OPTS: "-Xmx512m"
-    SPRING_PROFILES_ACTIVE: "postgres,logstash"
-    SERVER_PORT: "8080"
-    APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY)"
-    APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
-
-  namespace_secrets:
-    whereabouts-api:
-      APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
-      OAUTH_CLIENT_ID: "OAUTH_CLIENT_ID"
-      OAUTH_CLIENT_SECRET: "OAUTH_CLIENT_SECRET"
-    dps-rds-instance-output:
-      DATABASE_USERNAME: "database_username"
-      DATABASE_PASSWORD: "database_password"
-      DATABASE_NAME: "database_name"
-      DATABASE_ENDPOINT: "rds_instance_endpoint"
-    whereabouts-api-sqs-instance-output:
-      SQS_AWS_ACCESS_KEY_ID: "access_key_id"
-      SQS_AWS_SECRET_ACCESS_KEY: "secret_access_key"
-      SQS_QUEUE_NAME: "sqs_wb_name"
-    whereabouts-api-sqs-dl-instance-output:
-      SQS_AWS_DLQ_ACCESS_KEY_ID: "access_key_id"
-      SQS_AWS_DLQ_SECRET_ACCESS_KEY: "secret_access_key"
-      SQS_DLQ_NAME: "sqs_wb_name"
-
-  allowlist:
-      office: "217.33.148.210/32"
-      health-kick: "35.177.252.195/32"
-      mojvpn: "81.134.202.29/32"
-      cloudplatform-live1-1: "35.178.209.113/32"
-      cloudplatform-live1-2: "3.8.51.207/32"
-      cloudplatform-live1-3: "35.177.252.54/32"
-      petty-france-wifi: "213.121.161.112/28"
-      global-protect: "35.176.93.186/32"
-
 
 generic-prometheus-alerts:
   targetApplication: whereabouts-api
@@ -57,3 +7,9 @@ generic-prometheus-alerts:
 ingress:
   # live-1 is blue, live is green
   contextColour: green
+
+resources:
+  limits:
+    memory: 2Gi
+  requests:
+    memory: 512Mi
