--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -7,6 +7,9 @@ generic-prometheus-alerts:
 ingress:
   # live-1 is blue, live is green
   contextColour: green
+  annotations:
+    external-dns.alpha.kubernetes.io/aws-weight: "0"
+    nginx.ingress.kubernetes.io/custom-http-errors: "418"
 
 resources:
   limits:
