--- a/helm_deploy/whereabouts-api/templates/ingress.yaml
+++ b/helm_deploy/whereabouts-api/templates/ingress.yaml
@@ -1,20 +1,20 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "app.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
-{{- $ingressName := print $fullName "-v1-2" }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $ingressName }}
+  name: {{ $fullName }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
   annotations:
+  {{- with .Values.ingress.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+    kubernetes.io/ingress.class: "nginx"
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
-    external-dns.alpha.kubernetes.io/set-identifier: {{ $ingressName }}-{{ .Release.Namespace }}-{{ .Values.ingress.contextColour }}
-    external-dns.alpha.kubernetes.io/aws-weight: "0"
-    nginx.ingress.kubernetes.io/custom-http-errors: "418"
+    external-dns.alpha.kubernetes.io/set-identifier: {{ $fullName }}-{{ .Release.Namespace }}-{{ .Values.ingress.contextColour }}
 spec:
-  ingressClassName: "default"
   tls:
   {{- range .Values.ingress.hosts }}
   - hosts:
