--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -20,3 +20,20 @@ generic-prometheus-alerts:
   rdsAlertsDatabases:
     cloud-platform-67257a8b15c64e7f: "Whereabouts API"
 
+ingress:
+  enabled: true
+  enable_whitelist: true
+  hosts:
+    - host: whereabouts-api.service.justice.gov.uk
+      cert_secret: whereabouts-api-cert
+  path: /
+
+whitelist:
+  office: "217.33.148.210/32"
+  health-kick: "35.177.252.195/32"
+  mojvpn: "81.134.202.29/32"
+  cloudplatform-live1-1: "35.178.209.113/32"
+  cloudplatform-live1-2: "3.8.51.207/32"
+  cloudplatform-live1-3: "35.177.252.54/32"
+  petty-france-wifi: "213.121.161.112/28"
+  global-protect: "35.176.93.186/32"
