--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -13,6 +13,13 @@ generic-service:
     enabled: true
     host: app-hostname.local
     tlsSecretName: whereabouts-api-cert
+    annotations:
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        server_tokens off;
+        location /queue-admin/retry-all-dlqs {
+          deny all;
+          return 401;
+        }
 
   resources:
     limits:
