--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["github>ministryofjustice/hmpps-renovate-config:jvm"],
-  "reviewers": ["neilmendum", "timoj58", "natclamp-moj"],
+  "reviewers": ["neilmendum", "timoj58", "natclamp-moj", "p-nik"],
   "packageRules": [
     {
       "matchManagers": ["gradle"],
