--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -1,4 +1,3 @@
----
 # Values here are the same across all environments
 generic-service:
 
@@ -9,7 +8,7 @@ generic-service:
 
   image:
     repository: quay.io/hmpps/whereabouts-api
-    tag: app_version    # override at deployment time
+    tag: app_version # override at deployment time
     port: 8080
 
   ingress:
@@ -54,14 +53,8 @@ generic-service:
       HMPPS_SQS_QUEUES_WHEREABOUTS_DLQ_NAME: "sqs_wb_name"
 
   allowlist:
-      office: "217.33.148.210/32"
-      health-kick: "35.177.252.195/32"
-      mojvpn: "81.134.202.29/32"
-      cloudplatform-live1-1: "35.178.209.113/32"
-      cloudplatform-live1-2: "3.8.51.207/32"
-      cloudplatform-live1-3: "35.177.252.54/32"
-      petty-france-wifi: "213.121.161.112/28"
-      global-protect: "35.176.93.186/32"
+    groups:
+      - internal
 
 generic-prometheus-alerts:
   targetApplication: whereabouts-api
