--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,6 +10,9 @@ elite2api:
   host: localhost
   port: 8999
 
+prisonregister:
+  api.url: http://localhost:8094
+
 casenotes:
   endpoint.url: http://localhost:8093
 
