--- a/src/main/resources/whereabouts/patterns/groups.properties
+++ b/src/main/resources/whereabouts/patterns/groups.properties
@@ -244,6 +244,7 @@ WEI_G-Wing=WEI-G-.+
 WEI_H-Wing=WEI-H-.+
 WEI_I-Wing=WEI-I-.+
 WEI_J-Wing=WEI-J-.+
+WEI_K-Wing=WEI-K-.+
 WEI_Segregation=WEI-P-.+
 WEI_All\ Wings=WEI-[ABCDEFGHIJP]-.+
 # Whitemoor (red has leading space to improve ordering)
