--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -113,3 +113,6 @@ notify:
     court:
       released: d3d166be-b439-466e-bd81-7114183335d9
       transferred: 8c015bef-466a-4e99-854e-3b4574ee35b5
+
+service:
+   whereabouts-disabled: ${WHEREABOUTS_DISABLED:WDI,RSI,LPI}
