BAVL-41: Trigger migration and emit domain events + tests.

--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -37,6 +37,8 @@ generic-service:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
     HMPPS_SQS_USE_WEB_TOKEN: "true"
     FEATURE_BVLS_ENABLED: "true"
+    FEATURE_EVENTS_SNS_ENABLED: false
+    FEATURE_EVENT_VIDEO_LINK_BOOKING_MIGRATE: true
 
   namespace_secrets:
     whereabouts-api:
