--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -17,3 +17,6 @@ generic-service:
     WHEREABOUTS_DISABLED: RSI,WDI,LPI
     FEATURE_EVENTS_SNS_ENABLED: true
 
+  namespace_secrets:
+    hmpps-domain-events-topic:
+      HMPPS_SQS_TOPICS_DOMAINEVENTS_ARN: "topic_arn"
