--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -14,7 +14,7 @@ generic-service:
     SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
     NOTIFY_ENABLED: false
     PRISONREGISTER_ENDPOINT_URL: "https://prison-register-preprod.hmpps.service.justice.gov.uk"
-    WHEREABOUTS_DISABLED: RSI,WDI,LPI
+    WHEREABOUTS_DISABLED: RSI,WDI,LPI,FMI,IWI
     FEATURE_EVENTS_SNS_ENABLED: true
 
   namespace_secrets:
