--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ oauth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
 api.health-timeout-ms=1000
 prisonregister.endpoint.url=http://localhost:8084
+location-api.endpoint.url=http://localhost:8085
+
