--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -14,6 +14,9 @@ elite2api:
 prisonregister:
   endpoint.url: http://localhost:8094
 
+locationapi:
+  endpoint.url: http://localhost:8095
+
 casenotes:
   endpoint.url: http://localhost:8093
 
