--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,8 +10,12 @@ elite2api:
   host: localhost
   port: 8999
 
+
 prisonregister:
   endpoint.url: http://localhost:8094
+
+locationapi:
+  endpoint.url: http://localhost:8095
 
 casenotes:
   endpoint.url: http://localhost:8093
